--- a/index.html
+++ b/index.html
@@ -27,21 +27,32 @@
         <div>
             <div>
                 <h2>Digite os seus dados e escolha entre os três finalistas!</h2>
+                <input type="text" placeholder="Digite seu nome">
+                <input type="email" placeholder="Digite seu email">
             </div>
             <div>
                 <div>
                     <div>
                         <h2>Esportes</h2>
+                        <button>
+                            <h3>Votar</h3>
+                        </button>
                     </div>
                 </div>
                 <div>
                     <div>
                         <h2>Simulação</h2>
+                        <button>
+                            <h3>Votar</h3>
+                        </button>
                     </div>
                 </div>
                 <div>
                     <div>
                         <h2>Estratégia</h2>
+                        <button>
+                            <h3>Votar</h3>
+                        </button>
                     </div>
                 </div>
             </div>
