--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div>
                     <div>
                         <h2>Esportes</h2>
+                        <object data="sports_soccer_FILL0_wght400_GRAD0_opsz48.svg"></object>
                         <button>
                             <h3>Votar</h3>
                         </button>
@@ -42,6 +43,7 @@
                 <div>
                     <div>
                         <h2>Simulação</h2>
+                        <object data="flight_FILL0_wght400_GRAD0_opsz48.svg"></object>
                         <button>
                             <h3>Votar</h3>
                         </button>
@@ -50,6 +52,7 @@
                 <div>
                     <div>
                         <h2>Estratégia</h2>
+                        <object data="psychology_FILL1_wght400_GRAD0_opsz48.svg"></object>
                         <button>
                             <h3>Votar</h3>
                         </button>
