closes #4 - Aplicando CSS

--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto modulo 2</title>
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container1">
+        <div class="info">
             <div>
                 <h1>GAMES LOVERS ENQUETE</h1>
             </div>
             <div>
-                <p>Estamos escolhendo nessa enquete os melhores estilos de jogos entre os afixionados por video games.
+                <p>Estamos escolhendo nessa enquete os melhores estilos de jogos entre os aficionados por video games.
                     Participe da nossa enquete e escolha entre os três finalistas!</p>
             </div>
             <div>
                 <p>A sua escolha é muito importante para nós.</p>
             </div>
             <div>
-                <p>No final da enquete iremos sortear um <span>brinde</span> entre os participantes.</p>
+                <p>No final da enquete, iremos sortear um <span>brinde</span> entre os participantes.</p>
             </div>
         </div>
-        <div>
-            <div>
-                <h2>Digite os seus dados e escolha entre os três finalistas!</h2>
-                <input type="text" placeholder="Digite seu nome">
-                <input type="email" placeholder="Digite seu email">
-            </div>
-            <div>
+
+        <div class="container2">
+            <div class="dados">
                 <div>
-                    <div>
+                    <h2>Digite os seus dados e escolha entre os três finalistas!</h2>
+                    <input type="text" placeholder="Digite seu nome">
+                    <br>
+                    <input type="email" placeholder="Digite seu email">
+                </div>
+            </div>
+
+            <div class="votar">
+                <div class="card1">
+                    <div class="card2">
                         <h2>Esportes</h2>
                         <object data="sports_soccer_FILL0_wght400_GRAD0_opsz48.svg"></object>
                         <button>
@@ -40,8 +46,9 @@
                         </button>
                     </div>
                 </div>
-                <div>
-                    <div>
+
+                <div class="card1">
+                    <div class="card2">
                         <h2>Simulação</h2>
                         <object data="flight_FILL0_wght400_GRAD0_opsz48.svg"></object>
                         <button>
@@ -49,8 +56,9 @@
                         </button>
                     </div>
                 </div>
-                <div>
-                    <div>
+
+                <div class="card1">
+                    <div class="card2">
                         <h2>Estratégia</h2>
                         <object data="psychology_FILL1_wght400_GRAD0_opsz48.svg"></object>
                         <button>
@@ -60,10 +68,12 @@
                 </div>
             </div>
         </div>
-        <div>
+
+        <div class="creditos">
             <p>@Desenvolvido por GameTechLover</p>
         </div>
     </div>
+
 </body>
 
 </html>
