--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <p>A sua escolha é muito importante para nós.</p>
             </div>
             <div>
-                <p>No final da enquete, iremos sortear um <span>brinde</span> entre os participantes.</p>
+                <p>No final da enquete, iremos sortear um <span style="font-weight: bold;">brinde</span> entre os
+                    participantes.</p>
             </div>
         </div>
 
